projetGL/src/test/deca/context/invalid/provided/invalide_11_ops_logiques.deca
// Description : test 3 des operations logiques invalides

// Sortie : 
// ERROR  A MODIFIER

{
    float a;
    boolean b;
    a = a && b;

}